remove unsupported options from start script. fixes #30